@@ -1,3 +1,7 @@
+08/27/2003 Bob Rossi <bob@brasko.net>
+
+   * types.c: tgdb_print_item, knows how to print TGDB_UPDATE_FILE_POSITION
+
 08/20/2003 Bob Rossi <bob@brasko.net>
 
 	* types.c: tgdb_print_item, knows how to print TGDB_SOURCES_DENIED.
